Databasen er oppdatert til SQLAlchemy

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
       integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
       crossorigin=""></script>    
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.5.0.js"></script>-->
 
     <!-- Bootstrap CSS -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
@@ -20,14 +20,45 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('hjem')}}">Hjem</a>
-        <a href="{{ url_for('viser', typ='løp') }}">Løp</a>
-        <a href="{{ url_for('viser', typ='trening') }}">Treninger</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+      <a class="navbar-brand" href="/">KartID</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Hjem <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/vis">Liste</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/ny">Ny</a>
+          </li>
+          <!--<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Min side
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="/kart">Kartvisning</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0" action="/søk" method="post">
+          <input id="søk" name="søk" class="form-control mr-sm-2" type="search" placeholder="Søk" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Søk</button>
+        </form>
+      </div>
     </nav>
+    <br>
     <div class="container">
         {% block content %} {% endblock %}
     </div>
