--- a/templates/vis.html
+++ b/templates/vis.html
@@ -2,26 +2,37 @@
 
 {% block content %}
 
+<div style="position: static;">
+    <button type="button" class="btn btn-primary">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel"
+            viewBox="0 0 16 16">
+            <path
+                d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2z">
+            </path>
+        </svg>
+        Filter
+    </button>
+</div>
 
 <table class="table table-striped">
     <thead>
         <tr>
-            <td scope="col">Navn</td>
-            <td scope="col">Dato</td>
-            <td scope="col">Arrangør</td>
-            <td scope="col">Sted</td>
-            <td scope="col">Kommune</td>
+            <th scope="col">Navn</th>
+            <th scope="col">Dato</th>
+            <th scope="col">Arrangør</th>
+            <th scope="col">Sted</th>
+            <th scope="col">Kommune</th>
         </tr>
     </thead>
     <tbody>
         {% for k in kart %}
-            <tr>
-                <td><a href="{{ url_for('viser', id=k.nr) }}"> {{ k.navn }} </a></td>
-                <td>{{ k.dato }}</td>
-                <td>{{ k.arr }}</td>
-                <td>{{ k.sted }}</td>
-                <td>{{ k.kommune }}</td>
-            </tr>
+        <tr>
+            <td><a href="{{ url_for('viser', id=k.nr) }}"> {{ k.navn }} </a></td>
+            <td>{{ k.dato.strftime("%d.%m.%Y") }}</td>
+            <td>{{ k.arr }}</td>
+            <td>{{ k.sted }}</td>
+            <td>{{ k.kommune }}</td>
+        </tr>
         {% endfor %}
     </tbody>
 </table>
