--- a/templates/rediger.html
+++ b/templates/rediger.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <script>
-    function a (e) {
+    function a(e) {
         document.getElementById("lat").value = marker.getLatLng()["lat"]
         document.getElementById("lng").value = marker.getLatLng()["lng"]
     };
@@ -11,36 +11,50 @@
 
 <form method="post">
     {{ form.hidden_tag()}}
-    {{ form.nr.label }}
-    {{ form.nr(disabled = "true") }}
-    <br>
-    {{ form.navn.label }}
-    {{ form.navn() }}
-    <br>
-    {{ form.dato.label }}
-    {{ form.dato() }}
-    <br>
-    {{ form.typ.label }}
-    {{ form.typ() }}
-    <br>
-    {{ form.arr.label }}
-    {{ form.arr() }}
-    <br>
-    {{ form.klasse.label }}
-    {{ form.klasse() }}
-    <br>
-    {{ form.kommune.label }}
-    {{ form.kommune() }}
-    <br>
-    {{ form.sted.label }}
-    {{ form.sted() }}
-    <br>
-    {{ form.hva.label }}
-    {{ form.hva() }}
-    <br>
+    <table class="table">
+        <tr>
+            <td>{{ form.nr.label }}</td>
+            <td>{{ form.nr(disabled = "true") }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.navn.label }}</td>
+            <td>{{ form.navn() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.dato.label }}</td>
+            <td>{{ form.dato() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.typ.label }}</td>
+            <td>{{ form.typ() }}</td>
+        </tr>
+        <tr id="eventorIDRow">
+            <td>{{ form.eventorID.label }}</td>
+            <td>{{ form.eventorID() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.arr.label }}</td>
+            <td>{{ form.arr() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.klasse.label }}</td>
+            <td>{{ form.klasse() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.kommune.label }}</td>
+            <td>{{ form.kommune() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.sted.label }}</td>
+            <td>{{ form.sted() }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.hva.label }}</td>
+            <td>{{ form.hva() }}</td>
+        </tr>
+    </table>
     {{ form.lat(hidden="true") }}
     {{ form.lng(hidden="true") }}
-    
     {{ form.lagre(onclick="a()", class="btn btn-secondary") }}
     <a href="{{ url_for('viser', id=form.nr.data) }}" class="btn btn-secondary">Abryt</a>
     {{ form.slett(class="btn btn-secondary", style="background-color: #8B0000") }}
@@ -49,6 +63,10 @@
 <div id="map" style="height: 500px;"></div>
 
 <script>
+    vedOppdateringAvTyp(document.getElementById("typ"));
+    document.getElementById("typ").onchange = vedOppdateringAvTyp;
+
+
     var O = L.icon({
         iconUrl: "/static/O.png",
         iconSize: [25, 25],
@@ -59,9 +77,21 @@
     const attribution = '&copy; <a href="https://www.kartverket.no/">Kartverket</a>';
     const map = L.map('map').setView([{{ form.lat.data }}, {{ form.lng.data }}], 10);
     const marker = L.marker([{{ form.lat.data }}, {{ form.lng.data }}], {icon: O}).addTo(map);
-    marker.dragging.enable()
-    const tiles = L.tileLayer('https://opencache.statkart.no/gatekeeper/gk/gk.open_gmaps?layers=topo4&zoom={z}&x={x}&y={y}', {attribution})
-    tiles.addTo(map);
+    marker.dragging.enable();
+    marker.on("dragend", a);
+    const topo4 = L.tileLayer(
+        'https://opencache.statkart.no/gatekeeper/gk/gk.open_gmaps?layers=topo4&zoom={z}&x={x}&y={y}', {
+            attribution: '&copy; <a href="http://www.kartverket.no">Kartverket</a>'
+        });
+    const osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 19,
+        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    });
+    osm.addTo(map);
+    L.control.layers({
+        "OpenStreetMap": osm,
+        "Norgeskart": topo4
+    }).addTo(map);
 </script>
 
 
