Hjem har en nytt kart knapp

--- a/templates/hjem.html
+++ b/templates/hjem.html
@@ -16,6 +16,9 @@
 
     <h1>{% block title %} Hjem {% endblock %}</h1>
     <br>
+    <a href="/ny"><div class="btn btn-primary">Nytt kart</div></a>
+    <br>
+
     <h3>Ti siste kart</h3>
     <table class="table table-striped">
         <thead>
