--- a/templates/ny.html
+++ b/templates/ny.html
@@ -69,9 +69,9 @@
     vedOppdateringAvTyp(document.getElementById("typ"));
     document.getElementById("typ").onchange = vedOppdateringAvTyp;
 
-    const attribution = '&copy; <a href="https://www.kartverket.no/">Kartverket</a>';
+
     const map = L.map('map').setView([63.43, 10.39], 10);
-    const marker = L.marker([63.43, 10.39]).addTo(map);
+    const marker = L.marker([63.43, 10.39], {icon: O}).addTo(map);
     marker.dragging.enable();
     marker.on("dragend", a);
     const topo4 = L.tileLayer(
