--- a/templates/viser.html
+++ b/templates/viser.html
@@ -55,29 +55,9 @@
 <div id="map" style="height: 500px;"></div>
 
 <script>
-    var O = L.icon({
-        iconUrl: "/static/O.png",
-        iconSize: [25, 25],
-        iconAnchor: [15, 15],
-        popupAnchor: [0, -15],
-    });
-
-    const attribution = '&copy; <a href="https://www.kartverket.no/">Kartverket</a>';
-    const map = L.map('map').setView([{{ kart.lat }}, {{ kart.lng }}], 10);
-    const marker = L.marker([{{ kart.lat }}, {{ kart.lng }}, {icon: O}], {"draggable":false, icon:O}).addTo(map);
-    const osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        maxZoom: 19,
-        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-    });
-    const topo4 = L.tileLayer(
-        'https://opencache.statkart.no/gatekeeper/gk/gk.open_gmaps?layers=topo4&zoom={z}&x={x}&y={y}', {
-            attribution: '&copy; <a href="http://www.kartverket.no">Kartverket</a>'
-        });
-    osm.addTo(map);
-    L.control.layers({
-        "OpenStreetMap": osm,
-        "Norgeskart": topo4
-    }).addTo(map);
+    const map = visKart();
+    map.setView([{{ kart.lat }}, {{ kart.lng }}], 10);
+    const marker = L.marker([{{ kart.lat }}, {{ kart.lng }}], {icon: O}).addTo(map);
 </script>
 
 
